# engram

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  engram-seed.json  install.ps1  install.sh  opencode.json
.agents/: mcp_config.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: engram  engram-digest
.github/workflows/: backend.yml  draft-release.yml  frontend.yml  jetbrains.yml  release.yml  vscode.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: digest.md  pane.md  setup.md
claude-plugin/hooks/: hooks.json  session-brief.sh
claude-plugin/skills/engram/: SKILL.md
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: doctor.rs  main.rs  setup.rs  skillgen.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: config.rs  cortex.rs  digest.rs  engine.rs  error.rs  harness.rs  hub.rs  id.rs  lib.rs  migrate.rs  nli.rs  policy.rs  rag.rs  redact.rs  registry.rs  schema.rs  store.rs  store_sqlite.rs  store_tepin.rs  tests.rs  types.rs
crates/engram-http/: Cargo.toml
crates/engram-http/src/: lib.rs  tests.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/src/: lib.rs
docs/: README.md  conflicts-and-checkup.md  customization.md  getting-started.md  memory-model.md  models.md  multi-project.md  pane.md  recall-and-capture.md  storage.md  troubleshooting.md  trust.md
engram-jetbrains/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
engram-jetbrains/.run/: runIdeBackend.run.xml  runIdeFrontend.run.xml
engram-jetbrains/backend/: build.gradle.kts
engram-jetbrains/backend/src/main/resources/: engram.backend.xml
engram-jetbrains/frontend/: build.gradle.kts
engram-jetbrains/frontend/src/main/kotlin/dev/techtheist/engram/: EngramBackend.kt  EngramConfig.kt  EngramIcons.kt
engram-jetbrains/frontend/src/main/kotlin/dev/techtheist/engram/editor/: EngramFileEditor.kt  EngramFileEditorProvider.kt  EngramVirtualFile.kt  OpenEngramInEditorAction.kt
engram-jetbrains/frontend/src/main/kotlin/dev/techtheist/engram/toolWindow/: EngramPanel.kt  EngramToolWindowFactory.kt
engram-jetbrains/frontend/src/main/resources/: engram.frontend.xml
engram-jetbrains/gradle/: libs.versions.toml
engram-vscode/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
engram-vscode/src/: daemon.ts  extension.ts  mcp.ts  pane.ts  setup.ts
frontend/: .env.development  .gitignore  .stylelintrc.json  README.md  eslint.config.mjs  index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: app.css  base.css  themes.css  tokens.css
frontend/src/components/: GraphCanvas.vue
frontend/src/components/common/: EngramMark.vue  MarkdownView.vue  SidePanel.vue  TagEditor.vue
frontend/src/components/nodes/: EngramEdge.vue  EngramNode.vue
frontend/src/components/panels/: AuditPanel.vue  CheckupPanel.vue  ConfigPanel.vue  ConnectDialog.vue  FilterMenu.vue  HealthStrip.vue  MemoryLensPanel.vue  NodeCreatePanel.vue  NodeDetail.vue  ProjectSwitcher.vue  ReviewPanel.vue  SearchBar.vue  SettingsMenu.vue  SystemInfoPanel.vue
frontend/src/composables/: drawerToggle.ts  useAuditLog.ts  useGraphSettings.ts  useGraphSync.ts  useLayout.ts  useMemoryLens.ts  usePanels.ts  useSystemInfo.ts
frontend/src/constants/: ontology.ts  trust.ts
frontend/src/services/: api.ts
frontend/src/stores/: config.ts  graph.ts  layout.ts  projects.ts  theme.ts
frontend/src/types/: graph.ts
hooks/: file-read-match.sh  session-brief.sh
scripts/: deploy-pane.sh  nli-eval.py
skills/engram/: README.md
skills/engram/agents/: aggressive.md  normal.md  relaxed.md
skills/engram/aggressive/: SKILL.md
skills/engram/digest/: SKILL.md
skills/engram/normal/: SKILL.md
skills/engram/relaxed/: SKILL.md
