[workspace]
resolver = "3"
members = ["crates/engram-core", "crates/engram-http", "crates/engram-mcp", "crates/engram-cli"]

[workspace.package]
# One version for every crate: audit rows, /health, MCP server info and
# `engram --version` must all report the same number. release.yml stamps
# this line from the tag.
version = "0.6.1"
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/techtheist/engram"

[workspace.dependencies]
engram-core = { path = "crates/engram-core" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
# fastembed/ort pull in heavy native code; keep debug builds snappy.
opt-level = 0
