[package]
name = "engram"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
engram-core = { workspace = true, features = ["fastembed"] }
engram-http = { path = "../engram-http" }
engram-mcp = { path = "../engram-mcp" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = "0.10"
