[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
# The TepinDB storage driver (PLAN §7C step 5). 0.4 ships the Engram dossier:
# reset_embedder, native upsert, empty reads, open retry, and in-driver
# serving — the daemon hosts reads so `npx tepindb` can inspect a live store.
# default-features = false — Engram brings its own embedder, never tepin's.
# tepin-core rides along for ServeMode (not re-exported by the wrapper yet).
tepindb = { version = "0.4", default-features = false }
tepin-core = "0.4"
regex = "1"
ignore = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = "0.4"
sqlite-vec = "0.1.9"
fastembed = { version = "5.17.2", optional = true }
# The NLI layer runs on the same ONNX/tokenizer stack fastembed already
# links — versions pinned to fastembed 5.17.2's own, so one runtime is built.
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false }
tokenizers = { version = "0.22.2", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.17.2", optional = true, default-features = false }

[features]
fastembed = ["dep:fastembed", "dep:ort", "dep:tokenizers", "dep:ndarray"]
