[package]
name = "engram-http"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
engram-core = { workspace = true }
axum = "0.8"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Embeds frontend/dist into the release binary (reads from disk in debug builds
# so the pane can be iterated without recompiling); `mime-guess` gives content types.
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
