[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
engram-core = { workspace = true }
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
tracing = { workspace = true }
